Fixed dead-feeling scroll on ios fixed div

--- a/public/less/main.less
+++ b/public/less/main.less
@@ -296,6 +296,7 @@ header {
   #content-panel-inner {
     background: @content-bg-color;
     overflow-y: auto;
+    -webkit-overflow-scrolling: touch;
     position: absolute;
     width: 66%;
     bottom: 0;
